# HuggingFace-Manager

./: .gitignore  LICENSE  README.md  README_EN.md  build.spec  hfmanager.spec  local_build.bat  pyproject.toml  requirements.txt  run_diag.py  setup_env.bat  start_dev.bat
.github/workflows/: release.yml
frontend/: index.html  install_deps.bat  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BatchDownloadModal.tsx  Button.tsx  CacheDoctor.tsx  CachePage.tsx  Combobox.tsx  CompatibilityWarning.tsx  ConfirmModal.tsx  CreateRepoModal.tsx  DebugPanel.tsx  DownloadTaskCard.tsx  Dropdown.tsx  FileTree.tsx  ImportRepoModal.tsx  Input.tsx  Layout.tsx  ManageGitOps.tsx  ManageSpaceOps.tsx  ManageSync.tsx  MetadataEditorModal.tsx  Modal.tsx  MyReposPage.tsx  RepoCard.tsx  RepoDetails.tsx  ScrollToTop.tsx  SearchBar.tsx  SettingsPage.tsx  ToolboxModal.tsx  TrendingSection.tsx
frontend/src/components/settings/: AboutPage.tsx  DownloadSection.tsx  GeneralSettings.tsx  NetworkSection.tsx
frontend/src/contexts/: ConfirmContext.tsx  LanguageContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/hooks/: useFileSelection.ts
frontend/src/i18n/locales/: en.ts  zh.ts
frontend/src/utils/: format.ts
scripts/: build_local.py
src/: entry.py
src/hfmanager/: __init__.py  __main__.py  main.py  server.py
src/hfmanager/api/: dependencies.py  main.py
src/hfmanager/api/models/: cache.py  download.py  repository.py  search.py  settings.py
src/hfmanager/api/routes/: __init__.py  auth.py  cache.py  download.py  git_ops.py  library.py  plugins.py  repo_ops.py  repository.py  search.py  settings.py  space_ops.py  sync_ops.py  system.py  upload.py
src/hfmanager/core/: aria2_manager.py  auth_manager.py  cache_manager.py  cli_handler.py  converter.py  data_viewer.py  desktop.py  download_worker.py  downloader.py  library_manager.py  metadata_parser.py  mirror_manager.py  pattern_matcher.py  plugin_manager.py  uploader.py  verification.py
src/hfmanager/ui/: cache_view.py  download_view.py  main_window.py  preview_dialog.py  settings_view.py  styles.py
src/hfmanager/utils/: config.py  logger.py  system.py
