[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hfmanager"
version = "0.1.0"
description = "A GUI tool for downloading and managing Hugging Face models and datasets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "happylinze", email = "linze.li@stu.jiangnan.edu.cn"}
]
keywords = ["huggingface", "downloader", "gui", "cache-manager", "hfmanager", "aria2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "huggingface_hub>=0.20.0",
    "hf_transfer>=0.1.4",
    "markdown>=3.5.0",
    "humanize>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "pywebview>=5.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
hfmanager = "hfmanager.main:main"

[project.gui-scripts]
hfmanager-gui = "hfmanager.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
